// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelect is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  inputid="id"
  isdropdown="true"
  isloading="false"
>
  <eui-validatable-control>
    <select
      aria-label="aria-label"
      class="euiSelect euiFormControlLayout--1icons testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
      id="id"
      name="name"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props disabled options are rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isdropdown="true"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiFormControlLayout--1icons"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        disabled=""
        value="2"
      >
        Option #2
      </option>
    </select>
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props fullWidth is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="true"
  isdropdown="true"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiFormControlLayout--1icons euiSelect--fullWidth"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props isInvalid is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isdropdown="true"
  isinvalid="true"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <select
      class="euiSelect euiFormControlLayout--2icons"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props isLoading is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isdropdown="true"
  isloading="true"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiFormControlLayout--2icons euiSelect-isLoading"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props options are rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isdropdown="true"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiFormControlLayout--1icons"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props value option is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isdropdown="true"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiFormControlLayout--1icons"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </eui-validatable-control>
</eui-form-control-layout>
`;
